--- a/styles/style.css
+++ b/styles/style.css
@@ -1,46 +1,131 @@
- 
-.principal{
-    background-color : #cccccc;
+header{
+    background-color: #BBBBBB;
+    padding: 0 20px;
+}
+.caja{
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+}
+nav{
+    position: absolute;
+    top: 110px;
+    right: 0;
+}
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
+}
+nav a{
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+.productos{
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px;
+}
+.productos li{
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    padding: 30px 20px;
+    margin: 0 1.5%;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
+    
+}
+.productos li :focus{
+    border: 2px solid #22ca49;
+}
+.productos h1{
+    font-size: 30px;
+    font-weight: bold;
+}
+.producto-descripcion{
+    font-size: 18px;
+}
+
+.precio{
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+nav a:hover{
+    color: #c78c19;;
+    text-decoration: underline;
+}
+
+.productos li:hover{
+    border-color: #c78c19;
+}
+.productos li:hover h1{
+    font-size: 33px;
+}
+.productos li:active{
+    border-color: #088c19;
+}
+footer{
+    text-align: center;
+    background: url(/imagenes/productBarber/bg.jpg);
+    padding: 40px;
+}
+.copyright{
+    color: #FFFFFF;
+    font-size: 13px;
     padding: 20px;
 }
-
-.titulo-principal{
-    padding-left: 30px;
+main{
+    width: 940px;
+    margin: 0 auto;
 }
-
-p{
-    text-align: center;
+form{
+    margin: 40px 0px;
 }
-em strong{
-    color: red;
-}
-#mision{
+form label, form legend{
+    display: block;
     font-size: 20px;
+    margin: 0 0 10px;
 }
-#banner{
-    width: 100%;
-}
-
-.tituloCentrado{
-    text-align: center;
-  padding-bottom: 20px;
-  text-decoration: underline;
-  font-weight: bold;
-}
-.diferencial{
-    background: #ffffff;
-    padding: 30px;
-}
-.diferencialUl{
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
-}
-.imgDiferencial{
+.input-padron{
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
     width: 50%;
 }
-
-.item{
-    font-style: italic;
+.checkbox{
+    padding: 20px 0;
+}
+.enviar{
+    width: 40%;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    background: orange;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
+.enviar:hover{
+    background: darkorange;
+    
+}
+table{
+    margin: 40px 40px;
+}
+thead{
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+td, th{
+    border: 1px solid #000000;
+    padding: 8px 15px;
 }
