--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
 header{
     background-color: #BBBBBB;
     padding: 0 20px;
@@ -81,8 +84,7 @@ footer{
     padding: 20px;
 }
 main{
-    width: 940px;
-    margin: 0 auto;
+
 }
 form{
     margin: 40px 0px;
@@ -128,4 +130,98 @@ thead{
 td, th{
     border: 1px solid #000000;
     padding: 8px 15px;
+}
+/*Style for home */
+.banner{
+    width: 100%;
+}
+.principal{
+    background: #FFFFFF;
+    padding: 3em 0;
+    width: 940px;
+    margin: 0 auto;
+}
+.titulo-principal{
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
+}
+.principal p{
+    margin: 0 0 1em;
+}
+.principal strong{
+    font-weight: bold;
+}
+.principal em{
+    font-style: italic;
+}
+.utensilios{
+    width: 120px;
+    float: left;
+    padding: 0 20px 20px 0; 
+}
+.mapa{
+    padding: 3em 0;
+    background: linear-gradient(#FFFFFF, #888888);
+}
+.mapa p{
+    margin: 0 0 2em;
+    text-align: center;
+}
+.mapa-contenido{
+    width: 940px;
+    margin: 0 auto;
+}
+.diferencial{
+    background: #888888;
+    
+}
+.video{
+    width: 560px;
+    margin: 1em auto;
+}
+.contenido-diferencial{
+    width: 640px;
+    margin: 0 auto;
+}
+.lista-diferencial{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+.item{
+    line-height: 1.5;
+}
+.item::before{
+    content: "★ ";
+}
+.item:first-child{
+    font-weight: bold;
+}
+.img-diferencial{
+    width: 60%;
+    transition: 400ms;
+    box-shadow: 10px 10px 30px 15px #000000;
+}
+.img-diferencial:hover{
+    opacity: 0.3;
+}
+/*Responsive*/
+@media screen and (max-width:480px) {
+    h1{
+        text-align: center;
+    }
+    nav{
+        position: static;
+    }
+
+    .caja, .principal,
+    .mapa, .mapa-contenido,
+    .contenido-diferencial, .video {
+        width: auto;
+    }
+    .lista-diferencial, .img-diferencial{
+        width: 100%;
+    }
 }
