--- a/styles/style.css
+++ b/styles/style.css
@@ -6,10 +6,10 @@ header{
     padding: 0 20px;
 }
 .caja{
-    position: relative;
-    width: 940px;
+    position: relative;   
     margin: 0 auto;
 }
+
 nav{
     position: absolute;
     top: 110px;
@@ -27,7 +27,7 @@ nav a{
     text-decoration: none;
 }
 .productos{
-    width: 940px;
+    height: 410.65px;
     margin: 0 auto;
     padding: 50px;
 }
@@ -83,9 +83,6 @@ footer{
     font-size: 13px;
     padding: 20px;
 }
-main{
-
-}
 form{
     margin: 40px 0px;
 }
@@ -138,7 +135,7 @@ td, th{
 .principal{
     background: #FFFFFF;
     padding: 3em 0;
-    width: 940px;
+    
     margin: 0 auto;
 }
 .titulo-principal{
@@ -170,16 +167,18 @@ td, th{
     text-align: center;
 }
 .mapa-contenido{
-    width: 940px;
     margin: 0 auto;
 }
+.caja, .principal, .mapa-contenido{
+    width: 940px;
+}
 .diferencial{
-    background: #888888;
-    
+    background: #888888; 
 }
 .video{
     width: 560px;
-    margin: 1em auto;
+    margin: auto;
+    padding: 60px 0px 30px 0px;
 }
 .contenido-diferencial{
     width: 640px;
