--- a/styles/style.css
+++ b/styles/style.css
@@ -26,18 +26,17 @@ nav a{
     text-decoration: none;
 }
 .productos{
-    height: 410.65px;
-
-    padding: 50px;
+    height: 26em;
+    padding: 3em 1em;
 }
 .productos li{
     display: inline-block;
     width: 30%;
     vertical-align: top;
-    padding: 30px 20px;
+    padding: 1.875em 1.25em;
     margin: 0 1.5%;
     box-sizing: border-box;
-    border: 2px solid #000000;
+    border: 0.15em solid #000;
     border-radius: 10px;
     
 }
@@ -53,9 +52,9 @@ nav a{
 }
 
 .precio{
-    font-size: 20px;
+    font-size: 1.25em;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 0.625em;
 }
 nav a:hover{
     color: #c78c19;;
@@ -66,13 +65,13 @@ nav a:hover{
     border-color: #c78c19;
 }
 .productos li:hover h1{
-    font-size: 33px;
+    font-size: 2.063em;
 }
 .productos li:active{
     border-color: #088c19;
 }
 footer{
-    background: url(imagenes/productBarber/bg.jpg);
+    background: url("/ProyectBarber/imagenes/productBarber/bg.jpg");
     padding: 40px;
 }
 .copyright{
@@ -199,7 +198,6 @@ td, th{
 /*contact style*/
 main h1{
     font-size: 2rem;
-    padding-top: 2rem;
 }
 .caja, .principal, 
 .main-contact, .mapa-contenido, 
