--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ nav a{
     text-decoration: none;
 }
 .productos{
-    height: 26em;
+    height: 28em;
     padding: 3em 1em;
 }
 .productos li{
@@ -198,6 +198,7 @@ td, th{
 /*contact style*/
 main h1{
     font-size: 2rem;
+    margin-top: 1em;
 }
 .caja, .principal, 
 .main-contact, .mapa-contenido, 
