--- a/styles/style.css
+++ b/styles/style.css
@@ -239,7 +239,7 @@ main h1{
     }
     /*Product*/
     .productos{
-        height: 1300.5px;
+        height: 86.5em;;
         padding: 40px;
     }
     .productos li{
