--- a/styles/style.css
+++ b/styles/style.css
@@ -352,3 +352,17 @@ main h1{
     }
 
 }
+@media screen and (max-width:720px) {
+    .productos {
+        width: 99.9%;
+        margin: 0px;
+        padding: 3em 0em;
+        height: 22em;
+      }
+      main h1 {
+        margin-top: 0em;
+      }
+    .tutulo-contact{
+        margin-top: 1em;
+    }
+}
