--- a/styles/style.css
+++ b/styles/style.css
@@ -256,6 +256,20 @@ main h1{
     }
 
 }
+@media screen and (max-width:755px) {
+    .productos {
+        width: 95.8%;
+        margin: 0px;
+        padding: 3em 1em;
+        height: 22em;
+    }
+    main h1 {
+        margin-top: 0em;
+      }
+    .tutulo-contact{
+        margin-top: 1em;
+    }
+}
 @media screen and (max-width:750px) {
     .productos {
         width: 95.7%;
@@ -270,6 +284,7 @@ main h1{
         margin-top: 1em;
     }
 }
+
 @media screen and (max-width:720px) {
     .productos {
         width: 99.9%;
